--- a/todo_list/templates/home.html
+++ b/todo_list/templates/home.html
@@ -23,6 +23,8 @@
       <th scope="col">Item</th>
       <th scope="col">Completed</th>
       <th scope="col">Time Estimate</th>
+      <th scope="col">Due Date</th>
+      <th scope="col">Priority</th>
       <th scope="col"> </th>
     </tr>
   </thead>
@@ -33,14 +35,18 @@
 					<td class="striker"><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
 					<td><center><a href="{% url 'uncross' things.id %}">Uncross</a></center></td>
                     <td><center><a href="{% url 'edit' things.id %}">{{ things.time_est }} minutes</a></center></td>
-					<td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
+                    <td><center><a>{{ things.due_date }}</a></center></td>
+                    <td><center><a>{{ things.priority }}</a></center></td>
+                    <td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
 				</tr>
 			{% else %}
 				<tr>
 					<td><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
 					<td><center><a href="{% url 'cross_off' things.id %}">Cross Off</a></center></td>
                     <td><center><a href="{% url 'edit' things.id %}">{{ things.time_est }} minutes</a></center></td>
-					<td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
+					<td><center><a>{{ things.due_date }}</a></center></td>
+                    <td><center><a>{{ things.priority }}</a></center></td>
+                    <td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
 				</tr>
 			{% endif %}
 		{% endfor %}
